Name:                diagrams-postscript
Version:             0.6
Synopsis:            Postscript backend for diagrams drawing EDSL
Description:         This package provides a modular backend for rendering
                     diagrams created with the diagrams EDSL using Postscript.
Homepage:            http://projects.haskell.org/diagrams/
License:             BSD3
License-file:        LICENSE
Author:              Ryan Yates
Maintainer:          fryguybob@gmail.com
Stability:           Experimental
Category:            Graphics
Build-type:          Simple
Cabal-version:       >=1.6
Source-repository head
  type:     git
  location: http://github.com/fryguybob/diagrams-postscript

Library
  Exposed-modules:     Diagrams.Backend.Postscript
                       Diagrams.Backend.Postscript.CmdLine
                       Graphics.Rendering.Postscript
  Hs-source-dirs:      src
  Build-depends:       base >= 4.3 && < 4.7,
                       mtl >= 2.0 && < 3.0,
                       dlist >= 0.5 && < 0.6,
                       vector-space >= 0.7 && < 0.9,
                       diagrams-core >= 0.5 && < 0.7,
                       diagrams-lib >= 0.5 && < 0.7,
                       cmdargs >= 0.6 && < 0.11,
                       split >= 0.1.2 && < 0.3,
                       monoid-extras >= 0.2 && < 0.3,
                       semigroups >= 0.3.4 && < 0.9

